<resources>
    <string name="app_name">Payan</string>
    <string name="title_activity_maps">Payan_Map</string>
    <string name="arrowBack">Arrow Back</string>

    <!-- TITLES MAIN -->
    <string name="tourism">Tourism</string>
    <string name="gastronomy">Gastronomy</string>
    <string name="hotel">Hotel</string>
    <string name="more">More</string>
    <string name="events">Events</string>
    <string name="menu">Menu</string>
    <string name="maps">Maps</string>
    <string name="user">User</string>
    <string name="credits">Credits</string>

    <!-- TITLES TOURISM WINDOW -->
    <string name="ecoGuide">Ecologic Guide</string>
    <string name="cityGuide">City Guide</string>
    <string name="guide">Guide</string>

    <!-- TITLES GASTRONOMY WINDOW -->
    <string name="restaurants">Restaurants</string>
    <string name="traditionalFoods">Traditional Foods</string>
    <string name="option">Option</string>

    <!-- TITLES HOTEL WINDOW -->

    <!-- TITLES OTHERS WINDOW -->
    <string name="nightclubs">Nightclubs</string>
    <string name="pubs">Pubs</string>

    <!-- OPTIONS -->
    <string name="category">Categories</string>
    <string name="suggestions">Suggestions</string>

    <!-- ACTIONS -->
    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <string name="mail">Mail</string>

    <!-- AUTH AND ACCOUNTS -->
    <string name="provider">Provider</string>

    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Log Out</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- TITLES CREDITS WINDOW -->
    <string name="esteban">Esteban Arcos Alvear</string>
    <string name="andres">Andres Fernando Calderon</string>
    <string name="kevin">Kevin Grisales Rodriguez</string>
</resources>