<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:textSize="20sp"
            android:importantForAutofill="no"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:ems="10"
            android:hint="@string/provider"
            android:importantForAutofill="no"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/txtProvider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/provider"
            android:textSize="20sp"
            android:importantForAutofill="no"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:ems="10"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/signup"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/logout" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>