<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="70dp"
            android:layout_height="70dp">

            <ImageButton
                android:id="@+id/btnMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                app:srcCompat="@drawable/ic_menu_24"
                android:contentDescription="@string/user"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="272dp"
            android:layout_height="70dp">

            <ImageView
                android:id="@+id/imageLogoApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@drawable/base"
                android:contentDescription="@string/app_name"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="70dp"
            android:layout_height="70dp">

            <ImageButton
                android:id="@+id/btnUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                app:srcCompat="@drawable/ic_account_circle_24"
                android:contentDescription="@string/menu"/>
        </FrameLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/navBar"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/btnTourism"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/p2turismo">

                <!--    IMAGES VIEW SETTINGS
                <ImageView
                    android:id="@+id/imageTourism"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    tools:srcCompat="@drawable/p2turismo"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/tourism"/>
                -->

                <TextView
                    android:id="@+id/textTourism"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/tourism"
                    android:textColor="#FFFFFF"
                    android:textSize="60sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="18dp"
                android:baselineAligned="false">

                <FrameLayout
                    android:id="@+id/btnGastronomy"
                    android:layout_width="0dp"
                    android:layout_height="176dp"
                    android:layout_weight="1"
                    android:background="@drawable/p2gastronomia">

                    <TextView
                        android:id="@+id/textGastronomy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/gastronomy"
                        android:textColor="#FFFFFF"
                        android:textSize="28sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/btnHotel"
                    android:layout_width="0dp"
                    android:layout_height="176dp"
                    android:layout_weight="1"
                    android:background="@drawable/p2hoteleria">

                    <TextView
                        android:id="@+id/textHotel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/hotel"
                        android:textColor="#FFFFFF"
                        android:textSize="28sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/btnMore"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/p2otros">

                <TextView
                    android:id="@+id/textMore"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/more"
                    android:paddingStart="40dp"
                    android:paddingEnd="0dp"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/btnEvents"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:orientation="vertical"
                android:layout_marginTop="18dp">

                <TextView
                    android:id="@+id/textEvents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/events"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageEvents"
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:src="@drawable/p2eventos"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/events" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorGris">

        <ImageButton
            android:id="@+id/btnMaps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:src="@drawable/ic_map_24"
            app:tint="#FFFFFF"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/maps">

        </ImageButton>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>