<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="70dp"
            android:layout_height="70dp">

            <ImageButton
                android:id="@+id/btnUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:contentDescription="@string/arrowBack"
                app:srcCompat="@drawable/ic_arrow_back" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="242dp"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/textTitleW"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/category"
                android:gravity="center"
                android:text="@string/more"
                android:textAllCaps="true"
                android:textColor="@color/colorBlanco"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="70dp"
            android:layout_height="70dp">

            <ImageButton
                android:id="@+id/btnMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                app:srcCompat="@drawable/ic_search_24"
                android:contentDescription="@string/menu"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/navBar"
        tools:layout_editor_absoluteX="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="270dp">


            <ImageView
                android:id="@+id/imageNightclubes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/textNightclubes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/nightclubs"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginTop="36dp">

            <ImageView
                android:id="@+id/imagePubs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/textPubs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/pubs"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold" />
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>